--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -7,13 +7,23 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-  - task: UseJavaVersion@17
-    inputs:
-      versionSpec: '17'
-      addToPath: true
+- task: Docker@2
+  displayName: 'Build an image'
+  inputs:
+    containerRegistry: 'ExplorationTask' # Replace with your container registry connection name
+    repository: 'my-app-repo' # Replace with the name of your repository
+    Dockerfile: 'Dockerfile'
+    buildContext: '.'
 
-  - script: 'mvn clean install'
-    displayName: 'Build with Maven'
+- task: Docker@2
+  displayName: 'Push an image'
+  inputs:
+    containerRegistry: 'ExplorationTask' # Replace with your container registry connection name
+    repository: 'my-app-repo' # Replace with the name of your repository
+    command: 'push'
 
-  - script: 'mvn test'
-    displayName: 'Run Tests'
+- script: 'mvn clean install'
+  displayName: 'Build with Maven'
+
+- script: 'mvn test'
+  displayName: 'Run Tests'
