--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -7,12 +7,14 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
+- script: 'mvn clean install'
+  displayName: 'Build with Maven'
+
 - task: Docker@2
   displayName: 'Build an image'
   inputs:
     repository: 'my-app-repo' #name of your repository
     Dockerfile: 'Dockerfile'
-
 
 - script: 'mvn clean install'
   displayName: 'Build with Maven'
