--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -3,33 +3,18 @@ trigger:
     include:
       - main
 
-stages:
-  - stage: Build
-    displayName: 'Build and Test'
-    jobs:
-      - job: BuildAndTest
-        displayName: 'Build and Test'
-        pool:
-          vmImage: 'ubuntu-latest'  # Select the desired VM image
+pool:
+  vmImage: 'ubuntu-latest'
 
-        steps:
-          - script: |
-              mvn clean install
-            displayName: 'Build with Maven'
+steps:
+  - script: 'mvn clean install'
+    displayName: 'Build with Maven'
 
-  - stage: Deploy
-    displayName: 'Deploy to Docker'
-    dependsOn: Build
-    jobs:
-      - job: DeployToDocker
-        displayName: 'Deploy to Docker'
-        pool:
-          vmImage: 'ubuntu-latest'  # Select the desired VM image
+  - task: Docker@2
+    displayName: 'Build an image'
+    inputs:
+      repository: 'my-app-repo' #name of your repository
+      Dockerfile: 'Dockerfile'
 
-        steps:
-          - task: Docker@2
-            inputs:
-              repository: 'my-app-repo'  # Replace with the name of your Docker repository
-              command: 'buildAndPush'
-              Dockerfile: 'Dockerfile'
-              tags: 'latest'  # Adjust the Docker image tag as per your requirements
+  - script: 'mvn test'
+    displayName: 'Run Tests'
